--- a/Jungnami/Jungnami/SJ/Storyboard/Base.lproj/Main.storyboard
+++ b/Jungnami/Jungnami/SJ/Storyboard/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Bdd-R8-IfB">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="7vs-lA-Xi3">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -38,18 +38,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <view key="tableHeaderView" contentMode="scaleToFill" id="RS7-j9-1bq">
+                        <view key="tableHeaderView" contentMode="scaleToFill" misplaced="YES" id="RS7-j9-1bq">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="112"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="community_search_field" translatesAutoresizingMaskIntoConstraints="NO" id="q6d-3W-jCv">
-                                    <rect key="frame" x="49" y="7" width="277" height="31"/>
+                                    <rect key="frame" x="102" y="6.5" width="224" height="31"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="31" id="ZJc-b0-xZ6"/>
                                     </constraints>
                                 </imageView>
                                 <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dfZ-7H-M7C">
-                                    <rect key="frame" x="12" y="10" width="25" height="25"/>
+                                    <rect key="frame" x="12" y="10" width="78" height="24"/>
                                     <constraints>
                                         <constraint firstAttribute="width" secondItem="dfZ-7H-M7C" secondAttribute="height" multiplier="1:1" id="QL4-T3-CLy"/>
                                     </constraints>
@@ -59,7 +59,7 @@
                                     </connections>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ibd-wJ-sED">
-                                    <rect key="frame" x="338" y="10.5" width="25" height="25"/>
+                                    <rect key="frame" x="338" y="10" width="25" height="25"/>
                                     <constraints>
                                         <constraint firstAttribute="width" secondItem="Ibd-wJ-sED" secondAttribute="height" multiplier="1:1" id="bhJ-x8-eyR"/>
                                     </constraints>
@@ -69,37 +69,37 @@
                                     </connections>
                                 </button>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="community_search" translatesAutoresizingMaskIntoConstraints="NO" id="JaS-k7-F3Z">
-                                    <rect key="frame" x="59" y="15" width="15" height="15"/>
+                                    <rect key="frame" x="112" y="14.5" width="15" height="15"/>
                                     <constraints>
                                         <constraint firstAttribute="width" secondItem="JaS-k7-F3Z" secondAttribute="height" multiplier="1:1" id="GdD-h7-AjS"/>
                                     </constraints>
                                 </imageView>
                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="찾고 싶은 글을 검색해보세요" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XIZ-2n-eI8">
-                                    <rect key="frame" x="82" y="7" width="236" height="31"/>
+                                    <rect key="frame" x="135" y="6.5" width="183" height="31"/>
                                     <nil key="textColor"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <textInputTraits key="textInputTraits"/>
                                 </textField>
                                 <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iIk-qx-6bR">
-                                    <rect key="frame" x="0.0" y="45" width="375" height="67"/>
+                                    <rect key="frame" x="0.0" y="44.5" width="375" height="67"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="66.5" id="9NC-p0-BRh"/>
                                     </constraints>
                                 </containerView>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="community_bell_blue_circle" translatesAutoresizingMaskIntoConstraints="NO" id="lkQ-Xa-qPW">
-                                    <rect key="frame" x="334" y="10" width="16" height="16"/>
+                                    <rect key="frame" x="334" y="9.5" width="16" height="16"/>
                                     <constraints>
                                         <constraint firstAttribute="width" secondItem="lkQ-Xa-qPW" secondAttribute="height" multiplier="1:1" id="Ske-EX-l7C"/>
                                     </constraints>
                                 </imageView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q1B-rs-Dou">
-                                    <rect key="frame" x="334.5" y="10" width="16" height="16"/>
+                                    <rect key="frame" x="334.5" y="9.5" width="16" height="16"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7bJ-sv-cJv">
-                                    <rect key="frame" x="0.0" y="44.5" width="375" height="0.5"/>
+                                    <rect key="frame" x="0.0" y="44" width="375" height="0.5"/>
                                     <color key="backgroundColor" red="0.95294117647058818" green="0.95294117647058818" blue="0.95294117647058818" alpha="1" colorSpace="calibratedRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="0.5" id="DXc-7b-gfz"/>
@@ -511,6 +511,88 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ROX-u9-8z5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="834" y="839"/>
+        </scene>
+        <!--Search Legislator ResultTVC-->
+        <scene sceneID="OJG-jJ-Cgf">
+            <objects>
+                <tableViewController storyboardIdentifier="SearchLegislatorResultTVC" id="7vs-lA-Xi3" customClass="SearchLegislatorResultTVC" customModule="Jungnami" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="j5B-Wp-JVr">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="SearchLegislatorResultTVCell" rowHeight="75" id="AF8-sR-6BO" customClass="SearchLegislatorResultTVCell" customModule="Jungnami" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="75"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="AF8-sR-6BO" id="d5u-fC-che">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="74.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S8D-US-jlF">
+                                            <rect key="frame" x="12" y="29" width="22.5" height="16"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                            <color key="textColor" red="0.21176470588235294" green="0.77254901960784317" blue="0.94509803921568625" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="김성태" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6nP-ll-yqk">
+                                            <rect key="frame" x="114.5" y="10" width="36.5" height="17"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <color key="textColor" red="0.14901960784313725" green="0.14901960784313725" blue="0.14901960784313725" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="호감192위 / 비호감 59위" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1cb-qU-Xeq">
+                                            <rect key="frame" x="114" y="30" width="123" height="15"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <color key="textColor" red="0.21176470589999999" green="0.7725490196" blue="0.94509803920000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="X5d-JG-kqk">
+                                            <rect key="frame" x="48.5" y="11" width="52" height="52"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="X5d-JG-kqk" secondAttribute="height" multiplier="1:1" id="ZiY-7q-e0R"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="서울 강서구 을" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ELK-s7-cHu">
+                                            <rect key="frame" x="114" y="46.5" width="69.5" height="14.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <color key="textColor" red="0.41960784313725491" green="0.41960784313725491" blue="0.41960784313725491" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="X5d-JG-kqk" firstAttribute="width" secondItem="d5u-fC-che" secondAttribute="width" multiplier="52:375" id="5tI-7Z-50x"/>
+                                        <constraint firstAttribute="bottom" secondItem="X5d-JG-kqk" secondAttribute="bottom" constant="11.5" id="8z1-jQ-Fny"/>
+                                        <constraint firstItem="X5d-JG-kqk" firstAttribute="top" secondItem="d5u-fC-che" secondAttribute="top" constant="11" id="9Cp-vl-urA"/>
+                                        <constraint firstItem="X5d-JG-kqk" firstAttribute="centerY" secondItem="d5u-fC-che" secondAttribute="centerY" id="9s4-Zf-nJL"/>
+                                        <constraint firstItem="1cb-qU-Xeq" firstAttribute="leading" secondItem="6nP-ll-yqk" secondAttribute="leading" id="Aam-nK-8e1"/>
+                                        <constraint firstItem="S8D-US-jlF" firstAttribute="leading" secondItem="d5u-fC-che" secondAttribute="leading" constant="12" id="RWJ-ZI-viO"/>
+                                        <constraint firstItem="S8D-US-jlF" firstAttribute="centerY" secondItem="X5d-JG-kqk" secondAttribute="centerY" id="ZEH-0L-PzL"/>
+                                        <constraint firstItem="1cb-qU-Xeq" firstAttribute="centerY" secondItem="X5d-JG-kqk" secondAttribute="centerY" id="hSk-x4-xz8"/>
+                                        <constraint firstItem="ELK-s7-cHu" firstAttribute="leading" secondItem="1cb-qU-Xeq" secondAttribute="leading" id="jhf-Yj-jvo"/>
+                                        <constraint firstItem="X5d-JG-kqk" firstAttribute="leading" secondItem="S8D-US-jlF" secondAttribute="trailing" constant="14" id="ldS-D8-LC1"/>
+                                        <constraint firstItem="6nP-ll-yqk" firstAttribute="leading" secondItem="X5d-JG-kqk" secondAttribute="trailing" constant="14" id="lwK-rn-g5s"/>
+                                        <constraint firstItem="ELK-s7-cHu" firstAttribute="top" secondItem="1cb-qU-Xeq" secondAttribute="bottom" constant="2" id="mxH-6m-qL4"/>
+                                        <constraint firstItem="1cb-qU-Xeq" firstAttribute="top" secondItem="6nP-ll-yqk" secondAttribute="bottom" constant="3" id="yzX-Ac-8jk"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="nameLbl" destination="6nP-ll-yqk" id="M8k-jG-oSx"/>
+                                    <outlet property="profileImg" destination="X5d-JG-kqk" id="n89-DB-fEG"/>
+                                    <outlet property="rankDetailLbl" destination="1cb-qU-Xeq" id="PrT-xr-xQb"/>
+                                    <outlet property="rankLbl" destination="S8D-US-jlF" id="adE-xl-h8L"/>
+                                    <outlet property="regionLbl" destination="ELK-s7-cHu" id="OU4-Zt-6Gc"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="7vs-lA-Xi3" id="Ump-JZ-VH8"/>
+                            <outlet property="delegate" destination="7vs-lA-Xi3" id="DYY-u1-Vai"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="acp-sD-06y" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1677.5999999999999" y="832.53373313343332"/>
         </scene>
         <!--RegionVC-->
         <scene sceneID="yOI-0K-oOJ">
